Fixed oops page check, changed overlay z-index to 1000.

--- a/assets/scss/partials/_overlay.scss
+++ b/assets/scss/partials/_overlay.scss
@@ -1,5 +1,5 @@
 .overlay {
-  z-index: 50;
+  z-index: 1000;
   position: fixed;
   top: 0;
   left: 0;
