--- a/assets/scss/partials/_page.scss
+++ b/assets/scss/partials/_page.scss
@@ -13,7 +13,7 @@
     margin: 0 auto;
   }
 
-  .error404 & {
+  .oops & {
     height: calc(100% - 100px);
   }
 }
